# mailgun-relay

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
docs/: api-compatibility.md  architecture.md  backlog.md  implementation-plan.md  ops-integration.md
docs/superpowers/plans/: 2026-05-25-ship-mailgun-relay.md
src/mailgun_relay/: __init__.py  __main__.py  app.py  auth.py  config.py  errors.py  headers.py  logging_setup.py  mime_build.py  policy.py  routes.py  smtp_client.py
tests/: conftest.py  test_auth.py  test_body_limit.py  test_config.py  test_headers.py  test_health.py  test_messages_endpoint.py  test_mime_build.py  test_policy.py  test_smtp_submission.py
