[project]
name = "mailgun-relay"
version = "0.1.0"
description = "Mailgun-API-compatible SMTP relay for django-anymail clients"
readme = "README.md"
authors = [
    { name = "Jochen Wersdörfer", email = "jochen@wersdoerfer.de" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.20",
    "email-validator>=2.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "idna>=3.16",
]

[project.scripts]
mailgun-relay = "mailgun_relay.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "aiosmtpd>=1.4.6",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "error",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/mailgun_relay"]
plugins = ["pydantic.mypy"]
